[package]
name = "eos-eapi"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
categories = [ "api-bindings" ]
description = "Arista EOS eAPI client library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.24", features = ["socket", "uio", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["io-util", "net", "rt"], optional=true }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[features]
async = ["dep:tokio"]

[[example]]
name = "async_cli"
required-features = ["async"]
